WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
88797
Crash when a plug-in tries to use the NPRuntime API with JavaScript disabled
https://bugs.webkit.org/show_bug.cgi?id=88797
Summary
Crash when a plug-in tries to use the NPRuntime API with JavaScript disabled
Anders Carlsson
Reported
2012-06-11 12:56:39 PDT
Crash when a plug-in tries to use the NPRuntime API with JavaScript disabled
Attachments
Patch
(3.65 KB, patch)
2012-06-11 12:58 PDT
,
Anders Carlsson
beidson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2012-06-11 12:58:21 PDT
Created
attachment 146889
[details]
Patch
Anders Carlsson
Comment 2
2012-06-11 13:17:13 PDT
Committed
r120002
: <
http://trac.webkit.org/changeset/120002
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug