Crash when a plug-in tries to use the NPRuntime API with JavaScript disabled https://bugs.webkit.org/show_bug.cgi?id=88797 <rdar://problem/11574844>

Reviewed by Brady Eidson.

* PluginProcess/PluginControllerProxy.cpp:
(WebKit::PluginControllerProxy::initialize):
Handle the windowNPObjectID being 0.

(WebKit::PluginControllerProxy::windowScriptNPObject):
Handle m_windownPObject being null.

* WebProcess/Plugins/PluginView.cpp:
(WebKit::PluginView::windowScriptNPObject):
Return null if JavaScript is disabled.

(WebKit::PluginView::pluginElementNPObject):
Ditto.

git-svn-id: svn://svn.chromium.org/blink/trunk@120002 bbb929c8-8fbe-4397-9dbb-9b2b20218538