third_party/WebKit/Source/WebKit2/WebProcess/Plugins/PluginView.cpp
@@ -1080,8 +1080,10 @@ NPObject* PluginView::windowScriptNPObject()
     if (!frame())
         return 0;
 
-    // FIXME: Handle JavaScript being disabled.
-    ASSERT(frame()->script()->canExecuteScripts(NotAboutToExecuteScript));
+    if (!frame()->script()->canExecuteScripts(NotAboutToExecuteScript)) {
+        // FIXME: Investigate if other browsers allow plug-ins to access JavaScript objects even if JavaScript is disabled.
+        return 0;
+    }
 
     return m_npRuntimeObjectMap.getOrCreateNPObject(*pluginWorld()->globalData(), frame()->script()->windowShell(pluginWorld())->window());
 }
@@ -1091,7 +1093,11 @@ NPObject* PluginView::pluginElementNPObject()
     if (!frame())
         return 0;
 
-    // FIXME: Handle JavaScript being disabled.
+    if (!frame()->script()->canExecuteScripts(NotAboutToExecuteScript)) {
+        // FIXME: Investigate if other browsers allow plug-ins to access JavaScript objects even if JavaScript is disabled.
+        return 0;
+    }
+
     JSObject* object = frame()->script()->jsObjectForPluginElement(m_pluginElement.get());
     ASSERT(object);
 
